<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">MiniApp 1</string>
    
    <!-- ListFragment -->
    <string name="list_item_image_description">Note photo</string>
    <string name="list_add_memo_button_description">Add note button</string>

    <!-- DetailsFragment -->
    <string name="details_memo_delete_button_text">Delete</string>
    <string name="details_memo_share_button_text">Share</string>
    <string name="details_memo_title_placeholder_text">Note title goes here</string>
    <string name="details_memo_timestamp_placeholder_text">Note timestamp goes here</string>
    <string name="details_memo_text_placeholder_text">Note text goes here</string>
    <string name="details_memo_image_description">Note image</string>
    <string name="details_memo_email_send_error_text">No application to send email with</string>

    <!-- NewFragment -->
    <string name="new_take_image_button_text">Take photo</string>
    <string name="new_memo_save_button_text">Save note</string>
    <string name="new_memo_title_hint_text">Add note title</string>
    <string name="new_memo_text_hint_text">Add note text</string>
    <string name="new_memo_image_description">Note photo</string>
    <string name="new_memo_title_empty_error_text">Note title cannot be empty</string>
    <string name="new_memo_text_empty_error_text">Note text cannot be empty</string>
    <string name="new_memo_image_empty_error_text">Note image cannot be empty</string>
    <string name="new_memo_camera_error_text">No application to take photo with</string>
</resources>