<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detailsGuidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detailsGuidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <ImageView
        android:id="@+id/detailsMemoImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/details_memo_image_description"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/detailsGuidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailsMemoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/details_memo_title_placeholder_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsGuidelineTop"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/detailsMemoTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_memo_timestamp_placeholder_text"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsMemoTitle" />

    <TextView
        android:id="@+id/detailsMemoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/details_memo_text_placeholder_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsMemoTimestamp" />

    <Button
        android:id="@+id/detailsDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_memo_delete_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/detailsShareButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detailsGuidelineBottom" />

    <Button
        android:id="@+id/detailsShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_memo_share_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detailsDeleteButton"
        app:layout_constraintTop_toTopOf="@+id/detailsGuidelineBottom" />

</androidx.constraintlayout.widget.ConstraintLayout>